--- a/about-us.html
+++ b/about-us.html
@@ -54,7 +54,7 @@
             </div><!-- container-fluid -->
         </div><!-- header-bar -->
     </header><!-- .site-header -->
-    <div class="hero-content">
+    <div class="hero-content background-pic">
     <div class="page-header">
         <div class="container">
             <div class="row">
